fix breadcrumb overflow on the x-axis

--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -293,6 +293,10 @@ body.dark {
     }
 }
 
+main {
+    overflow-x: hidden;
+}
+
 img {
     max-width: 100%;
     margin-left: 0;
